# pyroll-karman-force-torque

./: .gitignore  README.md  hatch.toml  pyproject.toml
docs/: docs.tex
pyroll/alexander_power_and_labour/: alexander_solver.py  roll_pass.py
pyroll/equivalent-karman/: __init__.py
pyroll/karman_force_torque/: __init__.py  karman_solver.py  report.py  roll_pass.py
pyroll/karman_power_and_labour/: __init__.py  karman_solver.py  report.py  roll_pass.py
pyroll/karman_power_and_labour/roll_pass/: __init__.py  additional_inits.py  roll_pass.py
pyroll/karman_power_and_labour/roll_pass/hookimpls/: __init__.py  disk_element.py  roll_pass.py
tests/: test_solve.py  test_solve_flat_flat.py  test_solve_oval_round.py  test_solve_round_flat.py  test_solve_round_oval.py  test_solve_round_oval_round.py  test_solve_square_oval.py
