[project]
name = "pyroll-karman-power-and-labour"
description = "Plugin for PyRoll providing a solution of von-Karmans ODE using the equivalent pass."
authors = [
    { name = "Christoph Renzing", email = "christoph.renzing@imf.tu-freiberg.de" }
]
license = "BSD-3-Clause"
homepage = "https://pyroll-project.github.io/"
repository = "https://github.com/pyroll-project/pyroll-karman-power-and-labour"
documentation = "https://github.com/pyroll-project/pyroll-karman-power-and-labour/blob/main/docs/docs.pdf"
packages = [
    { include = "pyroll/equivalent-karman-model" }
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]

requires-python = ">=3.9, <4.0"
dependencies = [
    "pyroll-core ~= 2.1.0",
    "pyroll-interface-friction~=2.0",
]

dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"