[project]
name = "pyroll-karman-force-torque"
description = "Plugin for PyRoll providing the power and labour model solving the von-Karman equation."
authors = [
    { name = "Christoph Renzing", email = "christoph.renzing@imf.tu-freiberg.de" }
]
license = "BSD-3-Clause"
homepage = "https://pyroll-project.github.io/"
repository = "https://github.com/pyroll-project/pyroll-karman-force-torque"
documentation = "https://github.com/pyroll-project/pyroll-karman-force-torque/blob/main/docs/docs.pdf"

readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]

requires-python = ">=3.9, <4.0"
dependencies = [
    "pyroll-core",
    "numdifftools",
    "pandas ~= 2.0",
]

dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"